# Fixed64

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  acos_lut.h
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  advanced_math_benchmark.cpp  advanced_math_benchmark.h  basic_operations_benchmark.cpp  basic_operations_benchmark.h  benchmark_main.cpp  benchmark_utils.h  fixed64_math_functions.cpp  fixed_vs_softfloat.cpp
docs/: # Triangle Function Lookup Table Optimization Techniques.md  examples.md  features.md  performance.md
examples/: Fixed64Example.cpp  FixedMathExample.cpp  fixed64_example.cpp  fixed_math_example.cpp
include/: AtanLUT.h  FixLut.h  FixMath.h  Fixed64.h  Fixed64Math.h  Fixed64TypeTraits.h  FixedMath.h  FixedTrigLut.h  FixedTrigLutTables.h  Primitives.h  acos_lut.h  atan2_lut.h  atan_lut.h  fixed64.h  fixed64_math.h  fixed_trig_lut.h  sin_lut.h  tan_lut.h
math/fp/: fixed64.h  fixed64_math.h  fixed64_random.h  fixed64_type_traits.h  primitives.h
math/fp/detail/: acos_lut.h  atan2_lut.h  atan_lut.h  log2_lut.h  sin_lut.h  tan_lut.h
scripts/: generate_acos_lut.py  generate_atan2_lut.py  generate_atan_lut.py  generate_constants.py  generate_cordic_table.py  generate_log2_lut.py  generate_sin_lut.py  generate_tan_lut.py
tests/: # Fixed64 Testing Best Practices.md  CMakeLists.txt  Fixed64BasicTests.cpp  Fixed64MathTests.cpp  Fixed64TrigTests.cpp  fixed64_basic_tests.cpp  fixed64_math_tests.cpp  fixed64_trig_tests.cpp
tests/basic/: ArithmeticTests.cpp  ConstantsTests.cpp  ConstructionTests.cpp  ConversionTests.cpp  StringConversionTest.cpp  arithmetic_tests.cpp  constants_tests.cpp  construction_tests.cpp  conversion_tests.cpp  string_conversion_test.cpp
tests/math/: AbsSignTests.cpp  AngleConversionTests.cpp  ClampTests.cpp  ComparisonTests.cpp  ExponentialTests.cpp  InterpolationTests.cpp  MinMaxTests.cpp  RoundingTests.cpp  SqrtTests.cpp  TrigTests.cpp  abs_sign_tests.cpp  angle_conversion_tests.cpp  clamp_tests.cpp  comparison_tests.cpp  exponential_tests.cpp  fixed64_random_tests.cpp  interpolation_tests.cpp  inverse_trig_precision_tests.cpp  log2_tests.cpp  min_max_tests.cpp  rounding_tests.cpp  sqrt_tests.cpp  trig_tests.cpp
